Fix content/wrapper broken styles
Override background/position absolute styles

--- a/src/styles/externals/region.css
+++ b/src/styles/externals/region.css
@@ -39,6 +39,7 @@ body h1 {
 
 #wrapper {
     width: 100%;
+    background: none;
 }
 
 #wrapper .related, .asset-gallery {
@@ -47,4 +48,5 @@ body h1 {
 
 .content {
     position: fixed;
+    right: 0;
 }
